# serpapi-mcp

./: .env.example  .gitignore  Dockerfile  README.md  build-engines.py  pyproject.toml  server.json
copilot/mcp-server-api/: manifest.yml
engines/: amazon.json  amazon_product.json  apple_app_store.json  apple_product.json  apple_reviews.json  baidu.json  baidu_news.json  bing.json  bing_copilot.json  bing_images.json  bing_maps.json  bing_news.json  bing_product.json  bing_reverse_image.json  bing_shopping.json  bing_videos.json  duckduckgo.json  duckduckgo_light.json  duckduckgo_maps.json  duckduckgo_news.json  ebay.json  ebay_product.json  facebook_profile.json  google.json  google_about_this_result.json  google_ads_transparency_center.json  google_ads_transparency_center_ad_details.json  google_ai_mode.json  google_ai_overview.json  google_autocomplete.json  google_events.json  google_finance.json  google_finance_markets.json  google_flights.json  google_flights_autocomplete.json  google_forums.json  google_hotels.json  google_hotels_autocomplete.json  google_hotels_reviews.json  google_images.json  (+67 more)
src/: server.py
src/serpapi-mcp-server/: server.py
